# Terrain

./: .clang-format  CMakeLists.txt  README.md  TODO  codecov.yaml
.github/workflows/: install.yml  standalone.yml  ubuntu.yml
include/: BaseApplication.hpp  Clock.hpp  Globals.hpp  InputManager.hpp  Mesh.hpp  Shader.hpp  Time.hpp  Window.hpp  greeter.h  tee.hpp
include/Camera/: Camera.hpp  SimpleCamera.hpp
include/Controllable/: Controllable.hpp  SimpleControllable.hpp
source/: BaseApplication.cpp  Clock.cpp  Globals.cpp  InputManager.cpp  Mesh.cpp  Shader.cpp  Time.cpp  Window.cpp  greeter.cpp
source/Camera/: Camera.cpp  SimpleCamera.cpp
source/Controllable/: Controllable.cpp  SimpleControllable.cpp
standalone/Terrain/: CMakeLists.txt
standalone/Terrain/Resources/Shaders/: Basic.frag  Basic.vert
standalone/Terrain/source/: ControllableCamera.cpp  ControllableCamera.hpp  main.cpp  tee.hpp
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
